--- a/homeassistant/components/rotel/manifest.json
+++ b/homeassistant/components/rotel/manifest.json
@@ -1,10 +1,13 @@
 {
   "domain": "rotel",
   "name": "Rotel Media Player",
-  "documentation": "https://www.home-assistant.io/components/rotel",
+  "documentation": "https://www.home-assistant.io/integrations/rotel",
   "requirements": [
-    "rsp1570serial-pp81381==0.1.4"
+    "rsp1570serial-pp81381==0.1.5"
   ],
   "dependencies": [],
-  "codeowners": ["@pp81381"]
+  "codeowners": [
+    "@pp81381"
+  ],
+  "iot_class": "local_push"
 }
